--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -1,2 +1,13 @@
-.root {
+.root {}
+
+.input {
+    padding: 0.6em 0.8em;
+    border: 1px solid #C7C7D3;
+    border-radius: 0.2em;
+
+    &:focus {
+        border: 1px solid #2a85ff;
+        outline: unset;
+        box-shadow: 0 0 6px #2A2768;
+    }
 }
