--- a/src/components/label/label.module.scss
+++ b/src/components/label/label.module.scss
@@ -1,2 +1,9 @@
-.root {
+.root {}
+
+.label {
+    display: block;
+    width: 100%;
+    font-size: 0.8em;
+    font-weight: 700;
+    margin: 0em 0em 0.5em;
 }
